2007-04-19  Marek Habersack  <mhabersack@novell.com>

	* HttpHandlerAction.cs: look up types in all the toplevel
	assemblies. Fixes bug #80897.

2007-04-17  Atsushi Enomoto  <atsushi@ximian.com>

	* ProcessModelSection.cs : cpuMask default value should be int,
	  not uint.

2007-04-06  Marek Habersack  <mhabersack@novell.com>

	* CustomErrorsSection.cs: make the customErrors section work.

	* PagesSection.cs: provide appropriate default value for the
	asyncTimeout setting.

2007-03-24  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationHost.cs: allow MachineToApplication definition
	for config paths that equal the domain virtual app directory.

2007-03-22  Adar Wesley <adarw@mainsoft.com>

	* HttpCapabilitiesBase.cs: implemented all capabilities.  Capabilities
	still throw if there is no value in browscaps.ini and the property is called.

2007-03-21  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* WebConfigurationManager.cs: fixed OpenWebConfiguration, should not
	lock when checking if configuration is already open

2007-03-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* WebConfigurationManager.cs: fixed OpenWebConfiguration, removed 
	GetBasePath call and locations search, since this not affects
	configuration initialization, but improves performance

2007-03-12  Marek Habersack  <mhabersack@novell.com>

	* ProvidersHelper.cs: support loading custom providers from
	App_Code assemblies. Fixes bug #81071.
	Also set eol-style to native.

2007-03-08  Gert Driesen  <drieseng@users.souceforge.net>

	* PagesSection.cs: Revert part of Adar's patch that regresses
	bug #80913.

2007-03-06  Adar Wesley <adarw@mainsoft.com>

	* PagesSection.cs: improve Enum parsing and strongly typed default values.

2007-02-20  Marek Habersack  <grendello@gmail.com>

	* Patch from Gert Driesen  <drieseng@users.sourceforge.net>
	* PagesSection.cs: Process value of EnableSessionState attribute
	case-sensitive, and perform check in getter. Fix for bug #80913.