@@ -1,3 +1,9 @@
+2007-05-14  Igor Zelmanovich <igorz@mainsoft.com>
+
+	* WebConfigurationManager.cs: 
+	make configurations synchronized.
+	added new internal method RemoveConfigurationFromCache.
+
 2007-04-19  Marek Habersack  <mhabersack@novell.com>
 
 	* HttpHandlerAction.cs: look up types in all the toplevel
